<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/a"
    android:layout_height="match_parent"
    tools:context=".AddNewEntryActivity" >

    <!-- Text Views -->
    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="70dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:textColor="#211f1f"
            android:id="@+id/date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <EditText
            android:layout_marginLeft="90dp"
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:gravity="top"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="#ff0000"
            android:inputType="date"
            android:textSize="15sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#0d0b0b"
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:layout_marginLeft="70dp"
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/date_text"
                android:backgroundTint="#ff0000"
                android:gravity="top"
                android:inputType="text"
                android:textColorHint="#000"
                android:hint="eg.eating some Lunch."
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#302c2c"
                android:id="@+id/total_weight_consumed"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="80dp"
                android:layout_above="@+id/cancel_button"
                android:layout_alignLeft="@+id/per_weight"
                android:layout_marginBottom="4dp"
                android:maxWidth="150dp"
                android:text="@string/total_weight_consumed"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/total_weight_text"
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/total_weight_consumed"
                android:layout_alignLeft="@+id/per_weight_text"
                android:gravity="center"
                android:backgroundTint="#ff0000"
                android:inputType="numberDecimal"
                android:textSize="18sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:textColor="#2b2929"
                android:id="@+id/calories_per_weight"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_alignBottom="@+id/calories_per_weight_text"
                android:layout_toLeftOf="@+id/calories_per_weight_text"
                android:maxWidth="150dp"
                android:text="@string/calories_per_weight"
                android:textSize="17sp" />
            <EditText

                android:id="@+id/calories_per_weight_text"
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/per_weight"
                android:layout_alignLeft="@+id/cancel_button"
                android:layout_alignParentRight="true"
                android:backgroundTint="#ff0000"
                android:inputType="numberDecimal"
                android:textSize="17sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#262222"
                android:id="@+id/per_weight"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_above="@+id/total_weight_consumed"
                android:layout_toLeftOf="@+id/per_weight_text"
                android:maxWidth="150dp"
                android:paddingLeft="10dp"
                android:text="@string/per_weight"
                android:textSize="17sp" />
            <EditText
                android:layout_marginLeft="45dp"
                android:id="@+id/per_weight_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/total_weight_consumed"
                android:layout_alignLeft="@+id/calories_per_weight_text"
                android:layout_alignParentRight="true"
                android:backgroundTint="#ff0000"
                android:inputType="numberDecimal"
                android:textSize="17sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="#2b2727"
                android:id="@+id/total_calories"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_above="@+id/calories_per_weight"
                android:layout_alignParentLeft="true"
                android:text="@string/total_calories"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold" />
            <!-- Edit Text Views -->
            <EditText
                android:id="@+id/total_calories_text"
                android:layout_width="match_parent"
                android:layout_marginLeft="45dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/calories_per_weight"
                android:layout_alignParentRight="true"
                android:backgroundTint="#ff0000"
                android:inputType="number"
                android:textSize="13sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Buttons -->
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_weight="1"
        android:id="@+id/submit_button"
        android:background="@drawable/pagetwo"
        android:textColor="#ffffff"
        android:textSize="20dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="createEntry"
        android:text="@string/submit_button" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/pagetwo"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/submit_button"
        android:onClick="returnToPrevActivity"
        android:text="@string/cancel_button" />

</LinearLayout>

</LinearLayout>